# CMEA

./: test.cpp
series0_handout/series0_handout/linear_regression/: CMakeLists.txt  cat_plot.m  cat_plot.py  main.cpp
series0_handout/series0_handout/midpoint/: CMakeLists.txt  plot_error_compare.m  plot_error_compare.py  writer.hpp
series0_handout/series0_handout/midpoint/midpoint/: midpoint.cpp  midpoint.hpp
series0_handout/series0_handout/midpoint/test_convergence/: test_convergence.cpp
series0_handout/series0_handout/midpoint/test_single/: test_single.cpp
series1_handout/series1_handout/expl-impl-timestep/: CMakeLists.txt  harmonic_oscill.cpp  plot_explimpl.m  plot_explimpl.py  writer.hpp
series1_handout/series1_handout/numerical_LA/: CMakeLists.txt  syssolve.cpp
series1_handout/series1_handout/trapezoidal/: CMakeLists.txt  exercise1e_plot.m  exercise1e_plot.py  trapezoidal.cpp
series2/series2_code/series2_code/multistep/: forward_euler.cpp  multistep.cpp  plot_convergence.m  writer.hpp
series2/series2_code/series2_code/ssprk3_timestep/: .gitignore  make_stability.m  plot_convergence.m  plot_convergence.py  solution.txt  ssprk3.cpp  ssprk3conv.cpp  time.txt
series2/series2_handout/multistep/: CMakeLists.txt  errors.txt  errors_ab2.txt  forward_euler.cpp  multistep.cpp  plot_convergence.py  plot_y.m  plot_y.py  resolutions.txt
series2/series2_handout/ssprk3_timestep/: CMakeLists.txt  make_stability.py  plot_u.m  plot_u.py  solution.txt  ssprk3.cpp  ssprk3conv.cpp
series3_handout/1d-FD/: CMakeLists.txt  README.txt  finite_difference.cpp  plot_convergence.m  plot_convergence.py  plot_fd.m  plot_fd.py
series3_handout/2d-FD_pure/: CMakeLists.txt  README.txt  finite_difference.cpp  plot_fd2d.m  plot_fd2d.py
