# Mandatory information that CMAKE needs
cmake_minimum_required (VERSION 3.1.0)

# Project name
PROJECT (2d_finite_difference)
INCLUDE("cmake/CommonHeader.cmake")
INCLUDE("cmake/Compiler.cmake")
# So that Visual Studio will define M_PI
ADD_DEFINITIONS(-D_USE_MATH_DEFINES)

INCLUDE_DIRECTORIES(".")
INCLUDE_DIRECTORIES("..")
INCLUDE("cmake/GetEigen.cmake")

SET(SRC_FD "finite_difference.cpp") # Source
ADD_EXECUTABLE(finite_difference ${SRC_FD}) 
ADD_DEPENDENCIES(finite_difference Eigen)
