# Mandatory information that CMAKE needs
cmake_minimum_required (VERSION 3.1.0)

# Project name
PROJECT (CMAEIIS1EX2)


# Prepare for Hunter (currently unused)
include("cmake/CommonHeader.cmake")

# Set some compiler flags
include ("cmake/Compiler.cmake")

# get Eigen
include("cmake/GetEigen.cmake")

SET(SRC "harmonic_oscill.cpp") # Source
ADD_EXECUTABLE(harmonic_oscill ${SRC}) # Compile as library
add_dependencies(harmonic_oscill Eigen)

